# wolff_cluster_algorithm_cpp

./: CMakeLists.txt  README.md
RayGuiWrapper/: RayGuiWrapper.hpp
Spin2D/: Spin2D.hpp  array_point.hpp
docs/: index.html  index.js  index.wasm
include/: interface_cluster_creator.hpp  interface_gui_array_2d.hpp  spin_control_modes.hpp  wolff_finite_state_machine.hpp
include/raylib_array_2d/: raylib_array_2d.hpp
include/spin_handlers/: abstract_spin_handler.hpp  automatic_spin_handler.hpp  manual_spin_handler.hpp
include/spin_handlers/automatic_spin_handler/: automatic_controller.hpp  full_automatic_cluster_creator.hpp  single_spin_automatic_cluster_creator.hpp
include/spin_handlers/manual_spin_handler/: full_manual_cluster_creator.hpp  interface_manual_cluster_creator.hpp  manual_controller.hpp  single_spin_manual_cluster_creator.hpp
include/wolff_algorithms/: base_wolff_algorithm.hpp  full_wolff_algorithm.hpp  single_spin_wolff_algorithm.hpp
physgui/: CMakeLists.txt
physgui/include/phys_gui/: phys_backend.hpp  phys_graphics.hpp  phys_gui.hpp  phys_runner.hpp
physgui/include/phys_gui/phys_runner/: game_loop.hpp
physgui/src/: debug_main.cpp
physgui/src/phys_backend/: app_window.cpp  imgui_manager.cpp  open_gl_context.cpp  sdl_backend.cpp
physgui/src/phys_runner/: cross_platform_runner.cpp  game_loop.cpp  native_runner.cpp
physgui/vendors/glad/: CMakeLists.txt
physgui/vendors/glad/include/glad/: glad.h
physgui/vendors/glad/src/: glad.c
physgui/vendors/imgui_gl3_sdl2/: CMakeLists.txt
physgui/vendors/imgui_gl3_sdl2/sdl2/: CMakeLists.txt
src/: main.cpp  wolff_finite_state_machine.cpp
src/raylib_array_2d/: raylib_array_2d.cpp
src/spin_handlers/: abstract_spin_handler.cpp  automatic_spin_handler.cpp  manual_spin_handler.cpp
src/spin_handlers/automatic_spin_handler/: full_automatic_cluster_creator.cpp  single_spin_automatic_cluster_creator.cpp
src/spin_handlers/manual_spin_handler/: full_manual_cluster_creator.cpp  manual_controller.cpp  single_spin_manual_cluster_creator.cpp
src/wolff_algorithms/: base_wolff_algorithm.cpp  full_wolff_algorithm.cpp  single_spin_wolff_algorithm.cpp
wolff_simulation/: CMakeLists.txt  main.cpp
wolff_simulation/include/: interface_cluster_creator.hpp  interface_gui_array_2d.hpp  interface_multi_spin.hpp  rng_interface.hpp  spin_control_modes.hpp  wolff_finite_state_machine.hpp
wolff_simulation/include/imgui_array_2d/: imgui_array_2d.hpp
wolff_simulation/include/spin_handlers/: abstract_spin_handler.hpp  automatic_spin_handler.hpp  manual_spin_handler.hpp
wolff_simulation/include/spin_handlers/automatic_spin_handler/: automatic_controller.hpp  full_automatic_cluster_creator.hpp  single_spin_automatic_cluster_creator.hpp
wolff_simulation/include/spin_handlers/manual_spin_handler/: full_manual_cluster_creator.hpp  interface_manual_cluster_creator.hpp  manual_controller.hpp  single_spin_manual_cluster_creator.hpp
wolff_simulation/include/wolff_algorithms/: base_wolff_algorithm.hpp  full_wolff_algorithm.hpp  single_spin_wolff_algorithm.hpp
wolff_simulation/periodic_array_2d/: PeriodicArray2d.hpp  array_point.hpp
wolff_simulation/src/: wolff_finite_state_machine.cpp
wolff_simulation/src/imgui_array_2d/: my_gui_array.cpp
wolff_simulation/src/spin_handlers/: abstract_spin_handler.cpp  automatic_spin_handler.cpp  manual_spin_handler.cpp
wolff_simulation/src/spin_handlers/automatic_spin_handler/: full_automatic_cluster_creator.cpp  single_spin_automatic_cluster_creator.cpp
wolff_simulation/src/spin_handlers/manual_spin_handler/: full_manual_cluster_creator.cpp  manual_controller.cpp  single_spin_manual_cluster_creator.cpp
wolff_simulation/src/wolff_algorithms/: base_wolff_algorithm.cpp  full_wolff_algorithm.cpp  single_spin_wolff_algorithm.cpp
wolff_simulation/web/: imgui_shell.html
